<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.CardView
            android:id="@+id/zoomFurther"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="@dimen/interelement_half"
                android:text="@string/please_zoom_further"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </android.support.v7.widget.CardView>


        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@color/textIcons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container"
            app:menu="@menu/bottom_navigation_main" />


        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:indeterminateOnly="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/atmDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clipToPadding="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/atmName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/interelement"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintBottom_toTopOf="@+id/atmAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Сбербанк" />

            <TextView
                android:id="@+id/atmAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/atmName"
                android:paddingBottom="8dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintBottom_toTopOf="@+id/bottomSheetAtmDistance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="ул. Ленина 45, 12345, г. Урюпинск" />

            <TextView
                android:id="@+id/bottomSheetAtmDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/atmAddress"
                android:drawableLeft="@drawable/ic_near_me_black_24px"
                android:drawablePadding="4dp"
                android:paddingBottom="@dimen/interelement"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textColor="@color/secondaryText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="400 м" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/navigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_navigation_white_24px"
        app:fabSize="normal"
        app:layout_anchor="@id/atmDetails"
        app:layout_anchorGravity="end" />

    <com.arlib.floatingsearchview.FloatingSearchView
        android:id="@+id/floatingSearchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:floatingSearch_close_search_on_keyboard_dismiss="true"
        app:floatingSearch_dimBackground="false"
        app:floatingSearch_leftActionMode="noLeftAction"
        app:floatingSearch_searchBarMarginLeft="8dp"
        app:floatingSearch_searchBarMarginRight="8dp"
        app:floatingSearch_searchBarMarginTop="8dp"
        app:floatingSearch_searchHint="@string/search_hint"
        app:floatingSearch_showSearchKey="false"
        app:floatingSearch_suggestionsListAnimDuration="250" />


</android.support.design.widget.CoordinatorLayout>

