<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_maps"
        android:enabled="true"
        android:icon="@drawable/ic_place_white_24px"
        android:title="@string/item_bn_maps" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/ic_list_white_24px"
        android:title="@string/item_bn_list" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24px"
        android:title="@string/item_bn_settings" />
</menu>

